# gemma4-apple-silicon

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
benchmark/: benchmark.py
data/: 00_download_dataset.py  01_fetch_vision_images.py  02_stratified_sample.py  qna_text_50.json  qna_vision_50_ids.json
docs/: article-outline.md  ple-bug-investigation.md
notebooks/: convert_gemma4_to_mlx.ipynb  convert_gemma4_to_mlx.py
results/: m_off_nothink_text.json  m_off_nothink_vision.json  m_off_think_text.json  m_off_think_vision.json  m_on_nothink_text.json  m_on_nothink_vision.json  m_on_think_text.json  m_on_think_vision.json  nothink_text_FA.json  nothink_text_NO_FA.json  nothink_vision.json  run_matrix_2026-04-08.md  smoke_test.json  snapshots.jsonl
scripts/: m1_dequantize_ple.py  m1_fix_json_files.sh  m1_pull_mlx_model.sh  m1_pull_mlx_model_gws.sh  m1_serve_vmlx.sh  monitor.sh  run_remaining.sh
